adjust_review_text

--- a/tables/deim_2025.md
+++ b/tables/deim_2025.md
@@ -21,7 +21,7 @@ Present the results of the analysis in the table below.
 
 
 ## Proposed Method
-|rank| movie_review_text| thinking_style_attr | thinking_style_text | tone_attr | tone_text| information_view_attr | information_view_text | expression_style_attr | expression_style_text| overall_personality | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
+|rank| movie_review_text(filmarks)| thinking_style_attr | thinking_style_text | tone_attr | tone_text| information_view_attr | information_view_text | expression_style_attr | expression_style_text| overall_personality | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
 |-|---|-|-|-|-|-|--|-|-|-|--|--|--|--|--|-|
 | 0 | まじでわからん。今まで見てきた作品の中でも群を抜いてわからん。これぞ"ジブリ"っていうアニメ... | 感情的| 作品に対する困惑や感情が強く表れている。| 否定的| 理解できないという否定的な感情が強調されている。 | 詳細志向| 作品の細部や過去作との関連に注目している。 | カジュアル | 口語的な表現が多く、感情を率直に表現している。 | NaN | 0.893911 | 0.900305| 0.922187 | 0.937889 | 0.0| 2.760380|
 | 1 | いやまじでこれ意味わからなかった映像は綺麗だけど終始ストーリーが理解不能ストーリー性とかじゃ... | 感情的| ストーリーが理解できず、混乱した感情が表現されている。 | 否定的| 映像は綺麗だが、ストーリーに対する不満が強く表れている。 | 詳細志向| 作品の背景や関連性について考察しているが、理解できなかったという点が強調されている。 | カジュアル | 口語的な表現が多く、感情を率直に表現している。 | NaN | 0.892382 | 0.902244| 0.880834 | 0.937889 | 0.0| 2.720967|
