--- a/tables/deim_2025.md
+++ b/tables/deim_2025.md
@@ -32,7 +32,7 @@ Present the results of the analysis in the table below.
 ## Baseline
 
 
-| rank | review | thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | overall_personality | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
+| rank | movie_review_text(filmarks) | thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | overall_personality | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
 |--|--|-|-|-|-|-|-|-|-|-|--|--|--|--|--|-|
 | 978  | なんか今までの作品で1番空や草木や水面が美しかった。明らかに違うように感じた。高畑勲作品も含... | 感情的 | 作品の美しさや感動を強調しており、感情的な表現が目立つ。 | 肯定的 | 全体的に作品に対する高い評価と感動が表れている。 | 詳細志向 | 具体的な要素（空や草木、水面）に言及し、作品の美しさを詳細に述べている。 | カジュアル | 親しみやすい言葉遣いで、感情を率直に表現している。 | NaN | 1.000000 | 0.0 | 0.0 | 0.000000 | 0.0 | 0.000000 |
 | 1169 | 久しぶりの宮崎駿監督のジブリ作品。作画とかがtheジブリって感じで感動！ストーリー展開として... | 感情的 | 作品に対する感動や個人的な好みが強く表れている。 | 肯定的 | 全体的に作品に対する好意的な感想が述べられている。 | 詳細志向 | ストーリーの理解や作画の細部に対する言及がある。 | カジュアル | 親しみやすい言葉遣いで感想が表現されている。 | NaN | 0.911984 | 0.0 | 0.0 | 0.000000 | 0.0 | 0.000000 |
