--- a/tables/deim_2025.md
+++ b/tables/deim_2025.md
@@ -21,23 +21,22 @@ Present the results of the analysis in the table below.
 
 
 ## Proposed Method
-|rank| movie_review_text(filmarks)| thinking_style_attr | thinking_style_text | tone_attr | tone_text| information_view_attr | information_view_text | expression_style_attr | expression_style_text| overall_personality | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
-|-|---|-|-|-|-|-|--|-|-|-|--|--|--|--|--|-|
-| 0 | まじでわからん。今まで見てきた作品の中でも群を抜いてわからん。これぞ"ジブリ"っていうアニメ... | 感情的| 作品に対する困惑や感情が強く表れている。| 否定的| 理解できないという否定的な感情が強調されている。 | 詳細志向| 作品の細部や過去作との関連に注目している。 | カジュアル | 口語的な表現が多く、感情を率直に表現している。 | NaN | 0.893911 | 0.900305| 0.922187 | 0.937889 | 0.0| 2.760380|
-| 1 | いやまじでこれ意味わからなかった映像は綺麗だけど終始ストーリーが理解不能ストーリー性とかじゃ... | 感情的| ストーリーが理解できず、混乱した感情が表現されている。 | 否定的| 映像は綺麗だが、ストーリーに対する不満が強く表れている。 | 詳細志向| 作品の背景や関連性について考察しているが、理解できなかったという点が強調されている。 | カジュアル | 口語的な表現が多く、感情を率直に表現している。 | NaN | 0.892382 | 0.902244| 0.880834 | 0.937889 | 0.0| 2.720967|
-| 2 | 予想外の展開すぎる。感想を文字に起こすのは難しくて、見終わったあとはなんとも言えない感情だっ... | 感情的| 感情が強く表現されており、感想を文字に起こすのが難しいと述べている。 | 肯定的| 宮崎駿の集大成としての評価が高く、わくわくしたというポジティブな感情が伝わる。 | 評価不能| 具体的な詳細や大局的な視点についての言及が不足している。| カジュアル | 感情的な表現が多く、カジュアルな言い回しが見受けられる。 | NaN | 0.901635 | 0.889941| 0.000000 | 0.987295 | 0.0| 1.877236|
-| 3 | ストーリー(満点2)1.7映像0.7音楽0.7プラス要素0.7IMAXで鑑賞。筆が重かった。... | 感情的| ストーリーや映像に対する感情的な反応が強く、理解できなかったという主観的な感想が多い。 | 否定的| 全体的に楽しめなかったという否定的な感情が表れている。 | 詳細志向| 具体的な要素やシーンについて言及しており、細部に対する関心が見られる。| カジュアル | 感情を率直に表現しており、カジュアルな言葉遣いが感じられる。 | NaN | 0.896071 | 0.000000| 0.932516 | 0.944026 | 0.0| 1.876541|
+| id | movie_review_text(作品レビュー詳細)| thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
+|--|--|-|-|-|-|-|-|-|-|-|--|--|--|--|-|
+| 631   | 宮崎駿がたっぷり詰まってた！映像はぐるぐる回って派手であの特有の不気味さもあって完全にジブリだったこんな世の中で生きていきたくないけど、こんな面白い作品が今後も沢山産まれるのなら頑張っていこ〜って思える作品死ぬまで描いてくれ映画のあとに考察みたら、また映画見たくなってきた | 感情的 | 作品に対する強い感情が表現されている。 | 肯定的 | 作品に対するポジティブな感想が多く含まれている。 | 詳細志向 | 映像や作品の特性について具体的に言及している。 | カジュアル | 親しみやすい言葉遣いで感情を表現している。 | NaN | 0.899898 | 0.941856 | 0.942693 | 0.984376 | 0.914117 | 3.783043 |
+| 331   | 記録用宮崎駿監督の最後の作品。子供の時から見てきたジブリの集大成。観ながら考えさせる作品だったしわからない部分も多い。何より鳥が苦手な自分にとって鳥多すぎて恐怖。ただ、それでもまた見たいと思う作品だった。映像、音楽はとても良い。 | 感情的 | 作品に対する個人的な感情や体験が強く表現されている。 | 肯定的 | 全体的に作品に対する好意的な感情が伝わる。 | 詳細志向 | 作品の具体的な要素についての考察が見られる。 | カジュアル | 親しみやすい言葉遣いで感情を率直に表現している。 | NaN | 0.889051 | 0.941710 | 0.961606 | 0.999074 | 0.000000 | 2.902390 |
+| 311   | 作画と音響は圧倒的だった！ハウルやもののけ姫、千と千尋、思い出のマーニーやカリオストロの城などこれまでの宮崎駿監督作品を彷彿とさせるシーンが沢山あってとっても楽しかった！内容も、ドキドキするシーンやワクワクするシーンが沢山あり世界観にのめり込まれました！最高の作品でしたありがとう宮崎駿監督 | 感情的 | 作品に対する感動や楽しさが強く表現されている。 | 肯定的 | 全体的に作品を称賛し、ポジティブな感情が伝わる。 | 詳細志向 | 具体的な作品名やシーンを挙げており、詳細に言及している。 | カジュアル | 親しみやすい言葉遣いで感情を表現している。 | 0.895668 | 0.953189 | 0.959623 | 0.984376 | 0.000000 | 2.897188 |
 
 
 ## Baseline
 
 
-| rank | movie_review_text(filmarks) | thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | overall_personality | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
-|--|--|-|-|-|-|-|-|-|-|-|--|--|--|--|--|-|
+| rank | movie_review_text(作品レビュー詳細) | thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
+|--|--|-|-|-|-|-|-|-|-|-|--|--|--|--|-|
 | 978  | なんか今までの作品で1番空や草木や水面が美しかった。明らかに違うように感じた。高畑勲作品も含... | 感情的 | 作品の美しさや感動を強調しており、感情的な表現が目立つ。 | 肯定的 | 全体的に作品に対する高い評価と感動が表れている。 | 詳細志向 | 具体的な要素（空や草木、水面）に言及し、作品の美しさを詳細に述べている。 | カジュアル | 親しみやすい言葉遣いで、感情を率直に表現している。 | NaN | 1.000000 | 0.0 | 0.0 | 0.000000 | 0.0 | 0.000000 |
 | 1169 | 久しぶりの宮崎駿監督のジブリ作品。作画とかがtheジブリって感じで感動！ストーリー展開として... | 感情的 | 作品に対する感動や個人的な好みが強く表れている。 | 肯定的 | 全体的に作品に対する好意的な感想が述べられている。 | 詳細志向 | ストーリーの理解や作画の細部に対する言及がある。 | カジュアル | 親しみやすい言葉遣いで感想が表現されている。 | NaN | 0.911984 | 0.0 | 0.0 | 0.000000 | 0.0 | 0.000000 |
 | 239  | 宮崎駿の頭の中に思い描く色々と過去に影響を受けた様々なものを詰め込んで世に放った！って感じ。... | 感情的 | 宮崎駿の作品に対する感情的な反応が強く表れている。 | 肯定的 | 作品の美しさや影響を受けたことに対するポジティブな感情が伝わる。 | 詳細志向 | 具体的な作品の要素や過去作との関連について言及している。 | カジュアル | 親しみやすい言葉遣いで感情を表現している。 | NaN | 0.910692 | 0.0 | 0.0 | 0.926096 | 0.0 | 0.926096 |
-| 945  | とてもいい意味で宮崎駿だったし、それであることに感謝した。水のぷくぷくとか、目の輝き、ひるむ... | 感情的 | 感情を揺さぶられたという表現から、感情的な反応が強いことが伺える。 | 肯定的 | 全体的にポジティブな感情が表現されており、感謝の気持ちが強い。 | 詳細志向 | 具体的な要素（キャラデザインや動作）に言及しており、詳細に注目している。 | カジュアル | 親しみやすい言葉遣いで、カジュアルな表現が多い。 | NaN | 0.907242 | 0.0 | 0.0 | 0.942405 | 0.0 | 0.942405 |
+| 945  | とてもいい意味で宮崎駿だったし、それであることに感謝した。水のぷくぷくとか、目の輝き、ひるむ... | 感情的 | 感情を揺さぶられたという表現から、感情的な反応が強いことが伺える。 | 肯定的 | 全体的にポジティブな感情が表現されており、感謝の気持ちが強い。 | 詳細志向 | 具体的な要素（キャラデザインや動作）に言及しており、詳細に注目している。 | カジュアル | 親しみやすい言葉遣いで、カジュアルな表現が多い。 | 0.907242 | 0.0 | 0.0 | 0.942405 | 0.0 | 0.942405 |
 
 ## Conclusion
 Summarize the findings and implications of the analysis.
