--- a/tables/deim_2025.md
+++ b/tables/deim_2025.md
@@ -1,42 +1,59 @@
-# DEIM 2025 Movie Review Analysis
+# DEIM 2025
 
-## Table of Contents
-1. [Introduction](#introduction)
-2. [Data Collection](#data-collection)
-3. [Analysis](#analysis)
-4. [Results](#results)
-5. [Conclusion](#conclusion)
+## データ詳細
+映画：『君たちはどう生きるか』　
 
-## Introduction
-Provide a brief introduction to the movie review analysis.
+期間：023/9/2〜2023/10/1
 
-## Data Collection
-Describe the methods used for data collection.
+件数：2000 件 (filmarksより)
 
+
+
+## 列名解説
+| 列名 | 説明 |
+|--|--|
+| id | レビューの一意の識別子 |
+| movie_review_text(作品レビュー詳細) | 映画に対するレビューのテキスト |
+| thinking_style_attr | 思考スタイルの属性 |
+| thinking_style_text | 思考スタイルに関するテキスト |
+| tone_attr | トーンの属性 |
+| tone_text | トーンに関するテキスト |
+| information_view_attr | 情報視点の属性 |
+| information_view_text | 情報視点に関するテキスト |
+| expression_style_attr | 表現スタイルの属性 |
+| expression_style_text | 表現スタイルに関するテキスト |
+| similarity | 他のレビューとの文書類似度 |
+| thinking_style_score | 思考スタイルのスコア |
+| tone_score | トーンのスコア |
+| expression_style_score | 表現スタイルのスコア |
+| information_view_score | 情報視点のスコア |
+| total_score | 総合スコア |
 ## Analysis
 Detail the analysis performed on the collected data.
 
 ## Results
 Present the results of the analysis in the table below.
 
-
-## Proposed Method
+## 検索対象のデータ
 | id | movie_review_text(作品レビュー詳細)| thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
 |--|--|-|-|-|-|-|-|-|-|-|--|--|--|--|-|
-| 631   | 宮崎駿がたっぷり詰まってた！映像はぐるぐる回って派手であの特有の不気味さもあって完全にジブリだったこんな世の中で生きていきたくないけど、こんな面白い作品が今後も沢山産まれるのなら頑張っていこ〜って思える作品死ぬまで描いてくれ映画のあとに考察みたら、また映画見たくなってきた | 感情的 | 作品に対する強い感情が表現されている。 | 肯定的 | 作品に対するポジティブな感想が多く含まれている。 | 詳細志向 | 映像や作品の特性について具体的に言及している。 | カジュアル | 親しみやすい言葉遣いで感情を表現している。 | NaN | 0.899898 | 0.941856 | 0.942693 | 0.984376 | 0.914117 | 3.783043 |
-| 331   | 記録用宮崎駿監督の最後の作品。子供の時から見てきたジブリの集大成。観ながら考えさせる作品だったしわからない部分も多い。何より鳥が苦手な自分にとって鳥多すぎて恐怖。ただ、それでもまた見たいと思う作品だった。映像、音楽はとても良い。 | 感情的 | 作品に対する個人的な感情や体験が強く表現されている。 | 肯定的 | 全体的に作品に対する好意的な感情が伝わる。 | 詳細志向 | 作品の具体的な要素についての考察が見られる。 | カジュアル | 親しみやすい言葉遣いで感情を率直に表現している。 | NaN | 0.889051 | 0.941710 | 0.961606 | 0.999074 | 0.000000 | 2.902390 |
+| 978 | なんか今までの作品で1番空や草木や水面が美しかった。明らかに違うように感じた。高畑勲作品も含め、スタジオジブリ作品の表現技法たくさん詰め込まれた感じで少し感動。ストーリーは思ったものと少し違ったけど、この作品を観てる間ずっとこれまでのジブリ作品を思い出す不思議な映画だった。やっぱり宮崎駿はすごい。 | 感情的 | 作品の美しさや感動を強調しており、感情的な表現が目立つ。 | 肯定的 | 全体的に作品に対する高い評価と感動が表れている。 | 詳細志向 | 具体的な要素（空や草木、水面）に言及し、作品の美しさを詳細に述べている。 | カジュアル | 親しみやすい言葉遣いで、感情を率直に表現している。 | 1.000000 | 1.000000 | 1.000000 | 1.000000 | 1.000000 | 4.000000 |
+
+
+## 提案手法
+| id | movie_review_text(作品レビュー詳細)| thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
+|--|--|-|-|-|-|-|-|-|-|-|--|--|--|--|-|
+| 631   | 宮崎駿がたっぷり詰まってた！映像はぐるぐる回って派手であの特有の不気味さもあって完全にジブリだったこんな世の中で生きていきたくないけど、こんな面白い作品が今後も沢山産まれるのなら頑張っていこ〜って思える作品死ぬまで描いてくれ映画のあとに考察みたら、また映画見たくなってきた | 感情的 | 作品に対する強い感情が表現されている。 | 肯定的 | 作品に対するポジティブな感想が多く含まれている。 | 詳細志向 | 映像や作品の特性について具体的に言及している。 | カジュアル | 親しみやすい言葉遣いで感情を表現している。 | 0.899898 | 0.941856 | 0.942693 | 0.984376 | 0.914117 | 3.783043 |
+| 331   | 記録用宮崎駿監督の最後の作品。子供の時から見てきたジブリの集大成。観ながら考えさせる作品だったしわからない部分も多い。何より鳥が苦手な自分にとって鳥多すぎて恐怖。ただ、それでもまた見たいと思う作品だった。映像、音楽はとても良い。 | 感情的 | 作品に対する個人的な感情や体験が強く表現されている。 | 肯定的 | 全体的に作品に対する好意的な感情が伝わる。 | 詳細志向 | 作品の具体的な要素についての考察が見られる。 | カジュアル | 親しみやすい言葉遣いで感情を率直に表現している。 | 0.889051 | 0.941710 | 0.961606 | 0.999074 | 0.000000 | 2.902390 |
 | 311   | 作画と音響は圧倒的だった！ハウルやもののけ姫、千と千尋、思い出のマーニーやカリオストロの城などこれまでの宮崎駿監督作品を彷彿とさせるシーンが沢山あってとっても楽しかった！内容も、ドキドキするシーンやワクワクするシーンが沢山あり世界観にのめり込まれました！最高の作品でしたありがとう宮崎駿監督 | 感情的 | 作品に対する感動や楽しさが強く表現されている。 | 肯定的 | 全体的に作品を称賛し、ポジティブな感情が伝わる。 | 詳細志向 | 具体的な作品名やシーンを挙げており、詳細に言及している。 | カジュアル | 親しみやすい言葉遣いで感情を表現している。 | 0.895668 | 0.953189 | 0.959623 | 0.984376 | 0.000000 | 2.897188 |
 
 
-## Baseline
+## ベースライン
 
 
 | rank | movie_review_text(作品レビュー詳細) | thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
 |--|--|-|-|-|-|-|-|-|-|-|--|--|--|--|-|
-| 978  | なんか今までの作品で1番空や草木や水面が美しかった。明らかに違うように感じた。高畑勲作品も含... | 感情的 | 作品の美しさや感動を強調しており、感情的な表現が目立つ。 | 肯定的 | 全体的に作品に対する高い評価と感動が表れている。 | 詳細志向 | 具体的な要素（空や草木、水面）に言及し、作品の美しさを詳細に述べている。 | カジュアル | 親しみやすい言葉遣いで、感情を率直に表現している。 | NaN | 1.000000 | 0.0 | 0.0 | 0.000000 | 0.0 | 0.000000 |
-| 1169 | 久しぶりの宮崎駿監督のジブリ作品。作画とかがtheジブリって感じで感動！ストーリー展開として... | 感情的 | 作品に対する感動や個人的な好みが強く表れている。 | 肯定的 | 全体的に作品に対する好意的な感想が述べられている。 | 詳細志向 | ストーリーの理解や作画の細部に対する言及がある。 | カジュアル | 親しみやすい言葉遣いで感想が表現されている。 | NaN | 0.911984 | 0.0 | 0.0 | 0.000000 | 0.0 | 0.000000 |
-| 239  | 宮崎駿の頭の中に思い描く色々と過去に影響を受けた様々なものを詰め込んで世に放った！って感じ。... | 感情的 | 宮崎駿の作品に対する感情的な反応が強く表れている。 | 肯定的 | 作品の美しさや影響を受けたことに対するポジティブな感情が伝わる。 | 詳細志向 | 具体的な作品の要素や過去作との関連について言及している。 | カジュアル | 親しみやすい言葉遣いで感情を表現している。 | NaN | 0.910692 | 0.0 | 0.0 | 0.926096 | 0.0 | 0.926096 |
-| 945  | とてもいい意味で宮崎駿だったし、それであることに感謝した。水のぷくぷくとか、目の輝き、ひるむ... | 感情的 | 感情を揺さぶられたという表現から、感情的な反応が強いことが伺える。 | 肯定的 | 全体的にポジティブな感情が表現されており、感謝の気持ちが強い。 | 詳細志向 | 具体的な要素（キャラデザインや動作）に言及しており、詳細に注目している。 | カジュアル | 親しみやすい言葉遣いで、カジュアルな表現が多い。 | 0.907242 | 0.0 | 0.0 | 0.942405 | 0.0 | 0.942405 |
+| 1169 | 久しぶりの宮崎駿監督のジブリ作品。作画とかがtheジブリって感じで感動！ストーリー展開としては、ちゃんと理解できてなかったり、あれ、ここの問題解決できてたっけ？みたいなことはあったけど、現実世界とは別世界のものの表現が不思議で個人的には好きだった。何回か観て理解深めたい、、 | 感情的 | 作品に対する感動や個人的な好みが強く表れている。 | 肯定的 | 全体的に作品に対する好意的な感想が述べられている。 | 詳細志向 | ストーリーの理解や作画の細部に対する言及がある。 | カジュアル | 親しみやすい言葉遣いで感想が表現されている。 | 0.911984 | 0.946792 | 0.960255 | 0.000000 | 0.000000 | 1.907047 |
+| 239 | 宮崎駿の頭の中に思い描く色々と過去に影響を受けた様々なものを詰め込んで世に放った！って感じ。詳しい説明がないから挑戦状のようにも感じる。過去作を彷彿とさせる場面も多々あったし、風景や空が本当に美しかった！大学で受けた大好きな映像分析の授業をもう一度受講したいと思った | 感情的 | 宮崎駿の作品に対する感情的な反応が強く表れている。 | 肯定的 | 作品の美しさや影響を受けたことに対するポジティブな感情が伝わる。 | 詳細志向 | 具体的な作品の要素や過去作との関連について言及している。 | カジュアル | 親しみやすい言葉遣いで感情を表現している。 | 0.910692 | 0.000000 | 0.000000 | 0.984376 | 0.921505 | 1.905881 |
+| 945 | とてもいい意味で宮崎駿だったし、それであることに感謝した。水のぷくぷくとか、目の輝き、ひるむ動作やキャラデザインまで、あー、これこれ、ジブリってこれだよね、っていうのがしっかり健在。ストーリーが分かるかというと分からないのだけど、所々刺さる部分もあって都度感情を揺さぶられた。何年後かに自分が理解できることを期待して見直したい。 | 感情的 | 感情を揺さぶられたという表現から、感情的な反応が強いことが伺える。 | 肯定的 | 全体的にポジティブな感情が表現されており、感謝の気持ちが強い。 | 詳細志向 | 具体的な要素（キャラデザインや動作）に言及しており、詳細に注目している。 | カジュアル | 親しみやすい言葉遣いで、カジュアルな表現が多い。 | 0.907242 | 0.000000 | 0.000000 | 0.000000 | 0.917055 | 0.917055 |
 
-## Conclusion
-Summarize the findings and implications of the analysis.
