--- a/tables/deim_2025.md
+++ b/tables/deim_2025.md
@@ -35,9 +35,9 @@ Detail the analysis performed on the collected data.
 Present the results of the analysis in the table below.
 
 ## 検索対象のデータ
-| id | movie_review_text(作品レビュー詳細)| thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
-|--|--|-|-|-|-|-|-|-|-|-|--|--|--|--|-|
-| 978 | なんか今までの作品で1番空や草木や水面が美しかった。明らかに違うように感じた。高畑勲作品も含め、スタジオジブリ作品の表現技法たくさん詰め込まれた感じで少し感動。ストーリーは思ったものと少し違ったけど、この作品を観てる間ずっとこれまでのジブリ作品を思い出す不思議な映画だった。やっぱり宮崎駿はすごい。 | 感情的 | 作品の美しさや感動を強調しており、感情的な表現が目立つ。 | 肯定的 | 全体的に作品に対する高い評価と感動が表れている。 | 詳細志向 | 具体的な要素（空や草木、水面）に言及し、作品の美しさを詳細に述べている。 | カジュアル | 親しみやすい言葉遣いで、感情を率直に表現している。 | 1.000000 | 1.000000 | 1.000000 | 1.000000 | 1.000000 | 4.000000 |
+| id | movie_review_text(作品レビュー詳細)| thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | 
+|-|-|-|-|-|-|-|-|-|-|
+| 978 | なんか今までの作品で1番空や草木や水面が美しかった。明らかに違うように感じた。高畑勲作品も含め、スタジオジブリ作品の表現技法たくさん詰め込まれた感じで少し感動。ストーリーは思ったものと少し違ったけど、この作品を観てる間ずっとこれまでのジブリ作品を思い出す不思議な映画だった。やっぱり宮崎駿はすごい。 | 感情的 | 作品の美しさや感動を強調しており、感情的な表現が目立つ。 | 肯定的 | 全体的に作品に対する高い評価と感動が表れている。 | 詳細志向 | 具体的な要素（空や草木、水面）に言及し、作品の美しさを詳細に述べている。 | カジュアル | 親しみやすい言葉遣いで、感情を率直に表現している。 |
 
 
 ## 提案手法
