add negative data

--- a/tables/deim_2025.md
+++ b/tables/deim_2025.md
@@ -28,19 +28,20 @@
 | expression_style_score | 表現スタイルのスコア |
 | information_view_score | 情報視点のスコア |
 | total_score | 総合スコア |
-## Analysis
-Detail the analysis performed on the collected data.
 
-## Results
-Present the results of the analysis in the table below.
 
-## 検索対象のデータ
+## 結果(肯定的意見)
+
+
+### 検索対象のデータ
 | id | movie_review_text(作品レビュー詳細)| thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | 
 |-|-|-|-|-|-|-|-|-|-|
 | 978 | なんか今までの作品で1番空や草木や水面が美しかった。明らかに違うように感じた。高畑勲作品も含め、スタジオジブリ作品の表現技法たくさん詰め込まれた感じで少し感動。ストーリーは思ったものと少し違ったけど、この作品を観てる間ずっとこれまでのジブリ作品を思い出す不思議な映画だった。やっぱり宮崎駿はすごい。 | 感情的 | 作品の美しさや感動を強調しており、感情的な表現が目立つ。 | 肯定的 | 全体的に作品に対する高い評価と感動が表れている。 | 詳細志向 | 具体的な要素（空や草木、水面）に言及し、作品の美しさを詳細に述べている。 | カジュアル | 親しみやすい言葉遣いで、感情を率直に表現している。 |
 
 
-## 提案手法
+
+
+### 提案手法
 | id | movie_review_text(作品レビュー詳細)| thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
 |--|--|-|-|-|-|-|-|-|-|-|--|--|--|--|-|
 | 631   | 宮崎駿がたっぷり詰まってた！映像はぐるぐる回って派手であの特有の不気味さもあって完全にジブリだったこんな世の中で生きていきたくないけど、こんな面白い作品が今後も沢山産まれるのなら頑張っていこ〜って思える作品死ぬまで描いてくれ映画のあとに考察みたら、また映画見たくなってきた | 感情的 | 作品に対する強い感情が表現されている。 | 肯定的 | 作品に対するポジティブな感想が多く含まれている。 | 詳細志向 | 映像や作品の特性について具体的に言及している。 | カジュアル | 親しみやすい言葉遣いで感情を表現している。 | 0.899898 | 0.941856 | 0.942693 | 0.984376 | 0.914117 | 3.783043 |
@@ -57,3 +58,29 @@ Present the results of the analysis in the table below.
 | 239 | 宮崎駿の頭の中に思い描く色々と過去に影響を受けた様々なものを詰め込んで世に放った！って感じ。詳しい説明がないから挑戦状のようにも感じる。過去作を彷彿とさせる場面も多々あったし、風景や空が本当に美しかった！大学で受けた大好きな映像分析の授業をもう一度受講したいと思った | 感情的 | 宮崎駿の作品に対する感情的な反応が強く表れている。 | 肯定的 | 作品の美しさや影響を受けたことに対するポジティブな感情が伝わる。 | 詳細志向 | 具体的な作品の要素や過去作との関連について言及している。 | カジュアル | 親しみやすい言葉遣いで感情を表現している。 | 0.910692 | 0.000000 | 0.000000 | 0.984376 | 0.921505 | 1.905881 |
 | 945 | とてもいい意味で宮崎駿だったし、それであることに感謝した。水のぷくぷくとか、目の輝き、ひるむ動作やキャラデザインまで、あー、これこれ、ジブリってこれだよね、っていうのがしっかり健在。ストーリーが分かるかというと分からないのだけど、所々刺さる部分もあって都度感情を揺さぶられた。何年後かに自分が理解できることを期待して見直したい。 | 感情的 | 感情を揺さぶられたという表現から、感情的な反応が強いことが伺える。 | 肯定的 | 全体的にポジティブな感情が表現されており、感謝の気持ちが強い。 | 詳細志向 | 具体的な要素（キャラデザインや動作）に言及しており、詳細に注目している。 | カジュアル | 親しみやすい言葉遣いで、カジュアルな表現が多い。 | 0.907242 | 0.000000 | 0.000000 | 0.000000 | 0.917055 | 0.917055 |
 
+
+
+## 結果(否定的意見)
+
+### 検索対象のデータ
+| id| review | thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text |
+|----|------------|--------|--------------------|----------------------|-----------|-----------|----------------------|----------------------|----------------------|
+| 1103 | 何を伝えたいのか分からず退屈だった考察見たら納得したけど、金を溝に捨てた気持ちは変わらない | 感情的 | 退屈さや金を捨てた気持ちが強く表現されている。 | 否定的 | 全体的に不満や批判的な感情が伝わってくる。 | 評価不能 | 具体的な情報や視点の詳細が不足しているため評価不能。 | カジュアル | 感情的な表現が多く、カジュアルな言い回しが使われている。|
+### 提案手法
+
+| id| review | thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
+|----|------------|--------|--------------------|----------------------|-----------|-----------|----------------------|----------------------|----------------------|----------------------|---------------------|------------|----------------------|------------|----------------------|
+ | 1103       | 何を伝えたいのか分からず退屈だった考察見たら納得したけど、金を溝に捨てた気持ちは変わらない | 感情的 | 退屈さや金を捨てた気持ちが強く表現されている。 | 否定的 | 全体的に不満や批判的な感情が伝わってくる。 | 評価不能 | 具体的な情報や視点の詳細が不足しているため評価不能。 | カジュアル | 感情的な表現が多く、カジュアルな言い回しが使われている。 |1.000000 | 1.000000 | 1.000000 | 1.000000 | 0.0 | 3.000000 |
+ | 1711       | 期待しすぎたのもあった。ちょっと色んな意味合いがあるんだろうなって思いながら、自分は今、何を見せられてるのかなと感じながら終わりました | 感情的 | 期待しすぎたという感情が表れており、主観的な感覚が強い。 | 否定的 | 期待外れの感情が含まれており、全体的に批判的なトーン。 | 評価不能 | 具体的な情報や詳細な分析が不足しているため評価不能。 | カジュアル | 感情的な表現が多く、カジュアルな言い回しが見受けられる。 |0.880263 | 0.901704 | 0.942051 | 0.987295 | 0.0 | 2.831051 |
+ | 717        | 退屈してしまった、、早く終わらないかなあって思ってた。これが芸術っていうならもう芸術を理解できない人でいいや最後の方は意味わからなすぎて笑えてきてた絵は綺麗だったけど、鳥が嫌いだからかなり気持ち悪いシーンが多かった | 感情的 | 退屈さや嫌悪感を率直に表現している。 | 否定的 | 全体的に批判的な感情が強い。 | 詳細志向 | 具体的な感情や体験に基づいている。 | カジュアル | 軽い口調で感情を表現している。 |0.872986 | 0.948008 | 0.955162 | 0.923034 | 0.0 | 2.826204 |
+| 1505       | 言いたいことややりたいことは分かるけどこれしか無かったの？という気持ちになったやりたいことやれて良かったね！とは思うけど……3時間くらいの尺で見たかった | 感情的 | やりたいことに対する期待と失望が表現されている。 | 否定的 | 全体的に不満や物足りなさが感じられる。 | 評価不能 | 具体的な情報や視点が不足しているため評価不能。 | カジュアル | 感情を率直に表現しており、カジュアルな文体である。 |0.879246 | 0.918953 | 0.959712 | 0.932384 | 0.0 | 2.811049 |
+
+
+### ベースライン
+
+|id | review | thinking_style_attr | thinking_style_text | tone_attr | tone_text | information_view_attr | information_view_text | expression_style_attr | expression_style_text | overall_personality | similarity | thinking_style_score | tone_score | expression_style_score | information_view_score | total_score |
+|----|------------|--------|--------------------|----------------------|-----------|-----------|----------------------|----------------------|----------------------|----------------------|---------------------|------------|----------------------|------------|----------------------|----------------------|
+
+| 1697       | 全然理解できなかったけど、不思議と退屈ではない！考察みてみよ | 感情的 | 理解できなかったが、退屈ではないという感情が表れている。 | 肯定的 | 退屈ではないというポジティブな感情が伝わる。 | 評価不能 | 具体的な情報や視点が不足しているため評価不能。 | カジュアル | 軽い口調で感情を表現している。 |0.898683 | 0.885905 | 0.000000 | 0.923034 | 0.0 | 1.808938 |
+| 1983       | この映画がなにを伝えたかったのか自分なりに3日間考えた結論を発表します。わかりません | 感情的 | 映画のメッセージについて考えた結果がわからないという感情的な反応を示している。 | 否定的 | 映画の意図が理解できなかったことを伝えており、否定的な印象を与えている。 | 評価不能 | 具体的な詳細や大局的な視点が示されていないため、評価不能。 | カジュアル | 軽い口調で自分の考えを述べており、カジュアルな表現スタイルが見受けられる。 |0.891859 | 0.000000 | 0.874746 | 0.000000 | 0.0 | 0.874746 |
+| 16         | 退屈なわけでもなく、意味がわかるわけでもなく、考察するわけでもなく | 評価不能 | レビューからは思考スタイルを特定する情報が不足している。 | 否定的 | 退屈さや意味の不明瞭さを示唆しており、全体的に否定的なトーンが感じられる。 | 評価不能 | 詳細な情報や視点が示されていないため、評価不能。 | カジュアル | 言葉遣いがカジュアルで、形式的ではない。 |0.890714 | 0.000000 | 0.907542 | 0.000000 | 0.0 | 0.907542 |
